--- a/bio.html
+++ b/bio.html
@@ -22,7 +22,7 @@
                 <a href="">link text</a>
             </nav>
         </div>
-        <h2>Template</h2>
+        <h2>Bio Stuff</h2>
     </header>
     <main>
         <figure>
